Remove the use of the URL(String) constructor (deprecated in JDK 21) Refactor code to prefer the use of URI